# spyc

./: .ci-cache-version  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG_DRAFT_NOTES.md  BUGS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FEATURES.md  INSTALL.md  InRelease  Justfile  KEY.gpg  LAUNCH_PREP.md  LICENSE  Makefile  Packages  README.md  REFACTOR_PLAN.md  ROADMAP.md  Release  Release.gpg  SECURITY.md  TODO.md  bitbucket-pipelines.yml  build.rs  cliff.toml  deny.toml  rust-toolchain.toml
.aislop/: baseline.json  config.yml
.antigravitycli/: f72fae82-4f72-4527-8a5a-7df2a99398c7.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apt.yml  audit.yml  ci.yml  homebrew.yml  release.yml
docs/: AGENT_AWARENESS_PLAN.md  AGENT_ORCHESTRATION.md  AUTO_APPROVAL_PLAN.md  BRAND.md  CODE_REVIEW_2026-06.md  CODE_REVIEW_FOLLOWUP.md  COMMENT_AUDIT_PLAN.md  COMPETITIVE_REVIEW.md  COMPETITIVE_REVIEW_2026-06.md  KEYBINDINGS.md  LUA_SCRIPTING_PLAN.md  MERMAID_PAGER_PLAN.md  MVU_PLAN.md  PANE_RECOVERY_PLAN.md  PANE_STARTUP_TABS_PLAN.md  PATH_HANDOFF_PLAN.md  RELEASE_ENGINEERING.md  TEST_IMPROVEMENT_PLAN.md  V1_5_PLAN.md  V1_60_PLAN.md  V1_70_PLAN.md  WORKTREE_MCP_PLAN.md  YAZI_COMPETITIVE_REVIEW.md  presentation.html
docs/archive/: AGENT_AWARENESS_PLAN.md  BACKLOG_DRAFT_NOTES.md  CODE_REVIEW_2026-06.md  LUA_SCRIPTING_PLAN.md  MERMAID_PAGER_PLAN.md  MVU_PLAN.md  README.md  REBRAND_PLAN.md  REFACTOR_PLAN.md  TESTING_STRATEGY.md  V1_60_PLAN.md  V1_70_PLAN.md  VSCODE_GIT_STUDY.md  WORKTREE_MCP_PLAN.md  YAZI_COMPETITIVE_REVIEW.md  bitbucket-pipelines.yml
docs/assets/: presentation.html
docs/assets/demo/: agents.tape  fake-claude-status.sh  fake-claude.sh  review.tape  spyc.tape  vsplit.tape
docs/demo/: fake-claude.sh  spyc.tape
docs/drafts/: AUTO_APPROVAL_PLAN.md  PANE_STARTUP_TABS_PLAN.md  PATH_HANDOFF_PLAN.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dsl_parse.rs  expand_path.rs  expand_percent.rs  highlight.rs  render_markdown.rs  word_wrap.rs
notes/: lazygit-gap-analysis.md  lazygit-ux-catalogue.md
path/: Cargo.toml
path/src/: main.rs
scripts/: aislop-baseline.py
scripts/git-hooks/: pre-commit
src/: app.rs  clipboard.rs  context.rs  debug_log.rs  envset.rs  key_trace.rs  lib.rs  main.rs  mcp.rs  mcp_cmd.rs  merge_driver.rs  notifications.rs  paths.rs  proc_cwd.rs  sysinfo.rs  term_title.rs
src/agent/: detect_rules.rs  mod.rs  resume.rs
src/app/: actions.rs  activity.rs  agent_status.rs  bootstrap.rs  capture.rs  clipboard.rs  codex_pin.rs  command_table.rs  commands.rs  config.rs  effect.rs  file_ops.rs  find_picker.rs  focus.rs  git_state.rs  git_view_session.rs  graveyard.rs  graveyard_ops.rs  grep_session.rs  harness_tests.rs  harpoon.rs  inventory_ops.rs  key_dispatch.rs  loop_steps.rs  lua.rs  lua_events.rs  mcp.rs  mermaid_ops.rs  mod.rs  mod_tests.rs  modal.rs  navigate.rs  pager_handler.rs  pager_history.rs  pager_stream.rs  pane_scroll.rs  pane_tabs.rs  pane_wake.rs  preview_ops.rs  proc.rs  (+18 more)
src/app/harness_tests/: mcp.rs  mod.rs  pane.rs  per_column.rs  second_commander.rs  vsplit.rs
src/app/key_dispatch/: confirms.rs  mod.rs  prompts.rs
src/app/pager_handler/: image.rs  mod.rs  modes.rs  motion.rs  pickers.rs
src/app/render/: chrome.rs  inner.rs  mod.rs  overlays.rs
src/app/snapshots/: spyc__app__render__render_tests__snapshot_frame_list_scrolled.snap  (+1 more)
src/config/: default.spycrc.toml  dsl.rs  mod.rs
src/fs/: atomic.rs  entry.rs  finder.rs  grep.rs  listing.rs  long_listing.rs  mod.rs  ops.rs  waking_sender.rs
src/git/: blame.rs  branch.rs  diff.rs  discovery.rs  excludes.rs  log.rs  mod.rs  model.rs  restore.rs  status.rs  test_support.rs  worktree.rs
src/keymap/: action.rs  mod.rs  resolver.rs  user.rs
src/lua/: api.rs  bridge.rs  mod.rs  worker.rs
src/mcp/: config.rs  hooks.rs  mod.rs  protocol.rs  readers.rs  server.rs
src/pane/: input.rs  mod.rs  pathref.rs  pty_host.rs  quick_select.rs  tabs.rs  tests.rs  widget.rs
src/shell/: expand.rs  mod.rs
src/state/: agy_transcript.rs  claude_transcript.rs  codex_transcript.rs  cursor.rs  frecency.rs  graveyard.rs  harpoon.rs  health.rs  history.rs  hook_consent.rs  ignore.rs  inventory.rs  marks.rs  mod.rs  pager_positions.rs  picks.rs  scope_registry.rs  session_names.rs  sessions.rs
src/ui/: blame_render.rs  color_depth.rs  diff_render.rs  help.rs  hex.rs  json.rs  layout.rs  line_edit.rs  list_view.rs  markdown.rs  mod.rs  pager.rs  prompt.rs  scrollback.rs  status.rs  syntax.rs  theme.rs  wrap.rs
tests/: filesystem.rs  keymap_roundtrip.rs  pane_roundtrip.rs
threads/: bug-listing-watcher-recursive-hang.md  bug-q-command-skips-session-save.md  bug-watercooler-sync-repair-resets-unpushed.md  bug-yank-clipboard-pbcopy-linux.md  caleb-freewheeling-brainstorming.md  caleb-initial-thoughts-and-findings.md  feature-bracket-pick-jump.md  feature-jump-history-popup-trigger.md  feature-pane-multi-split-config.md  feature-pane-state-general-recovery.md  feature-pane-toggle-preserve-context.md  history-arc-01-foundation-hygiene.md  history-arc-02-lazygit-investigation-and-harvest.md  history-arc-03-pane-behavior.md  history-arc-04-git-integration.md  history-arc-05-pager-surface.md  history-arc-06-input-and-overlays.md  history-arc-07-codex-and-mcp-bridge.md  history-arc-08-recoverability-and-deps.md  history-narrative-arc.md  history-overview.md  history-three-repo-lineage.md  human-exploration-of-nonhuman-threads.md  insight-drift.md  insight-emergent-properties.md  insight-recurrence.md  insight-trajectory.md  migration-github-origin-to-tripstack-corp.md  onboarding-architecture.md  onboarding-developer-experience.md  onboarding-docs-contracts.md  onboarding-entry-path.md  onboarding-overview.md  onboarding-product-charter.md  onboarding-release-process.md  onboarding-risk-register.md  onboarding-security.md  onboarding-team-map.md  onboarding-test-surface.md  onboarding-working-map.md  (+2 more)
(+217 files in other folders)
