[package]
name = "spyc"
version = "1.18.6"
edition = "2024"
description = "A vi-keyboard-driven file commander that pairs with Claude Code, inspired by SideFX's spy"
license = "BSD-3-Clause"
repository = "https://bitbucket.org/tripstack/spyc"
rust-version = "1.85"

[[bin]]
name = "spyc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
portable-pty = "0.8"
vt100 = "0.15"
ansi-to-tui = "7"
pretty-hex = "0.4"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
insta = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-static]
inherits = "release"

# Clippy lint configuration.
#
# We opt into `pedantic` and `nursery` to learn more idiomatic patterns, but
# mute a small set of lints that are famously noisy or subjective for a
# binary crate (as opposed to a published library). Each allow has a reason;
# remove a line if you want to hear that voice again.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Short/long types with the module name baked in are fine; this lint flags
# things like `fs::FsError` which we deliberately don't have.
module_name_repetitions = "allow"

# Binary crate — we don't need /// # Errors on every function returning Result.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Too noisy for a UI-heavy codebase full of u16/usize conversions between
# terminal geometry and list indices.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# We rarely need to mark public items #[must_use]; not useful here.
must_use_candidate = "allow"

# We intentionally use `if let Some(x) = y { ... } else { ... }` chains for
# readability; this lint wants us to collapse to `match`.
option_if_let_else = "allow"

# Dispatch functions (handle_prompt_key, App::apply) are naturally long —
# one match arm per supported action. Splitting them hurts navigation.
too_many_lines = "allow"

# "missing backticks in doc" is too eager — it flags things like trailing
# periods after identifiers and is frequently wrong.
doc_markdown = "allow"

# `branches_sharing_code` is overly aggressive about "same last statement"
# suggestions.
branches_sharing_code = "allow"

# Pedantic style lints we don't enforce — they're code-shape opinions, not
# correctness. Each line notes the lint and why we skip it.

# `use` near the point of use reads better than at the top of a long fn.
items_after_statements = "allow"

# JSON-RPC helpers take `Value` by value; that's the idiomatic shape even
# when a particular arm doesn't consume the whole thing.
needless_pass_by_value = "allow"

# Short locals like `new_bps` / `new_sp` in tight windows are fine; moving
# to verbose names hurts readability more than the lint helps.
similar_names = "allow"

# The CLI struct is clap-derived and has 4 bool flags. Fine.
struct_excessive_bools = "allow"

# Public methods that take `&self` for API consistency (future-proofing
# when other struct state is needed) — don't strip it just because the
# current body doesn't touch any fields.
unused_self = "allow"

# Nursery lint that hits every path manipulation against an integration
# boundary — a tuple/slice of (Path, fallback) would be strictly worse.
or_fun_call = "allow"
