[package]
name = "spyc"
version = "1.50.58"
edition = "2024"
description = "A Rust TUI file commander where the AI agent in the side pane can query the file commander itself"
license = "BSD-3-Clause"
repository = "https://bitbucket.org/tripstack/spyc"
rust-version = "1.85"

[[bin]]
name = "spyc"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
portable-pty = "0.8"
vt100 = "0.16"
ansi-to-tui = "8"
pretty-hex = "0.4"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"
libc = "0.2"
ignore = "0.4"
nucleo-matcher = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"
open = "5"
regex = "1"
grep-matcher = "0.1"
jiff = "0.2"
uuid = { version = "1", features = ["v7"] }
uzers = "0.12"
strip-ansi-escapes = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
tar = "0.4"
zstd = "0.13"
trash = "5"
# tempfile is a runtime dep (not just dev-deps) because the
# graveyard's cascade-to-trash and legacy-migration paths stage
# files into a TempDir before handing them to the system trash.
tempfile = "3"
rustix = { version = "1.1.4", features = ["process", "termios", "fs"] }

[dev-dependencies]
insta = "1"
proptest = { version = "1", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
# `unwind` instead of `abort` so `std::panic::catch_unwind` actually
# catches panics — used in `pane::Pane::process_bytes_safe` to recover
# from vt100 0.15's known unwrap-on-edge-case panic (hits
# `Option::unwrap` deep in screen.rs for some valid escape sequences,
# e.g. nvim's exit-from-alt-screen after specific scroll state). With
# `abort` a single panicking byte stream took down the entire spyc
# process, dropping every other pane along with it. Slightly larger
# binary + minor codegen change is a fine trade for not crashing the
# user's session. Worth keeping as a safety net even after a vt100
# upgrade.
panic = "unwind"

[profile.release-static]
inherits = "release"

# Clippy lint configuration.
#
# We opt into `pedantic` and `nursery` to learn more idiomatic patterns, but
# mute a small set of lints that are famously noisy or subjective for a
# binary crate (as opposed to a published library). Each allow has a reason;
# remove a line if you want to hear that voice again.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Short/long types with the module name baked in are fine; this lint flags
# things like `fs::FsError` which we deliberately don't have.
module_name_repetitions = "allow"

# Binary crate — we don't need /// # Errors on every function returning Result.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Too noisy for a UI-heavy codebase full of u16/usize conversions between
# terminal geometry and list indices.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# We rarely need to mark public items #[must_use]; not useful here.
must_use_candidate = "allow"

# We intentionally use `if let Some(x) = y { ... } else { ... }` chains for
# readability; this lint wants us to collapse to `match`.
option_if_let_else = "allow"

# Dispatch functions (handle_prompt_key, App::apply) are naturally long —
# one match arm per supported action. Splitting them hurts navigation.
too_many_lines = "allow"

# "missing backticks in doc" is too eager — it flags things like trailing
# periods after identifiers and is frequently wrong.
doc_markdown = "allow"

# `branches_sharing_code` is overly aggressive about "same last statement"
# suggestions.
branches_sharing_code = "allow"

# Pedantic style lints we don't enforce — they're code-shape opinions, not
# correctness. Each line notes the lint and why we skip it.

# `use` near the point of use reads better than at the top of a long fn.
items_after_statements = "allow"

# JSON-RPC helpers take `Value` by value; that's the idiomatic shape even
# when a particular arm doesn't consume the whole thing.
needless_pass_by_value = "allow"

# Short locals like `new_bps` / `new_sp` in tight windows are fine; moving
# to verbose names hurts readability more than the lint helps.
similar_names = "allow"

# The CLI struct is clap-derived and has 4 bool flags. Fine.
struct_excessive_bools = "allow"

# Public methods that take `&self` for API consistency (future-proofing
# when other struct state is needed) — don't strip it just because the
# current body doesn't touch any fields.
unused_self = "allow"

# Nursery lint that hits every path manipulation against an integration
# boundary — a tuple/slice of (Path, fallback) would be strictly worse.
or_fun_call = "allow"
